@@ -577,6 +577,7 @@
 
 	* Fix a possible divide by zero in els_scroller animator.
 
-2012-12-04  Cedric Bail
+2012-12-05  Cedric Bail
 
-	* Fix uninitialized data path in elm_flip.
+	* Fix uninitialized data path in elm_flip, elm_gesture_layer,
+	elm_interface_scrollable.
